apps/traefik/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: infra
spec:
  redirectScheme:
    scheme: https
    permanent: true
