apps/traefik/docker-backend.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: legacy-docker-traefik-endpoint
  namespace: infra
subsets:
- addresses:
  - ip: 192.168.0.210
  ports:
  - name: http
    port: 8080
  - name: https
    port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-docker-traefik-endpoint
  namespace: infra
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
