apps/traefik/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-public
  namespace: infra
  annotations:
    metallb.io/loadBalancerIPs: 192.168.0.242
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web-public
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websecure-public
      port: 443
      targetPort: 8443
      protocol: TCP
