apps/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.theorangeserver.net`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
    domains:
      - main: "*.theorangeserver.net"
      - sans:
        - "theorangeserver.net"
